<resources>
    <string name="app_name">CoronaKanditaten2020</string>
    <string name="your_location">Your Location</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="timestamp">Timestamp</string>
    <string name="text">Text</string>
    <string name="likes">Likes</string>
    <string name="category">Category</string>
    <string name="id">Id</string>
    <string name="parent_id">ParentId</string>
    <string name="selected_dates">Selected dates</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="error_with_server"> error with server</string>
    <string name="fail_connect_to_server">Failed to connect to server</string>
    <string name="no_back_action">There is no back action</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="forgot_password"><u>Forgot your password? Click here</u></string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must exceed 4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">"Login success"</string>
    <string name="btn_to_register_page">Register user</string>
    <string name="page_name_register">Register user</string>
    <string name="hint_username">Username</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="hint_age">Select date of birth</string>
    <string name="btn_register">Register</string>
    <string name="btn_to_login">Return to \nlogin</string>
    <string name="invalid_username">Invalid Username, must exceed 1 character</string>
    <string name="invalid_gender">Invalid Gender, please select your gender</string>
    <string name="invalid_age">Invalid Age, please enter your age</string>
    <string name="verify_email">Verify email</string>
    <string name="verify_email_text">Enter the verification code\nthat was sent \nto your email.\n\n <i>Click here to \nsend a new code.</i></string>
    <string name="hint_verification_code">Verification code</string>
    <string name="btn_verify">Verify</string>
    <string name="error_wrong_code">Wrong code</string>
    <string name="fail_create_user">Unable to create user</string>
    <string name="success_create_user">Successfully created new user</string>
    <string name="page_name_reset_password">Reset Password</string>
    <string name="btn_send_code">Send verification code</string>
    <string name="btn_resend_code">Resend verification code</string>
    <string name="sent_email_toast"> Verification code has been sent to your email</string>
    <string name="hint_confirmation_code">Confirmation code</string>
    <string name="wrong_email">No user connected to this Email</string>
    <string name="hint_new_password">New password</string>
    <string name="btn_change_password">Change password</string>
    <string name="page_name_start_page">Start page</string>
    <string name="log_out">Log Out</string>
    <string name="success_logout">Logged out successfully</string>
    <string name="fail_logout">Could not Log Out, please try again later</string>
    <string name="btn_report_symptom">Report\nsymptoms</string>
    <string name="btn_heatmap">Heatmap</string>
    <string name="btn_forum">Forum</string>
    <string name="btn_statistics">Statistics</string>
    <string name="fragment_my_settings">Settings</string>
    <string name="section_notifications">Notifications</string>
    <string name="title_enable_notifications">Enable notifications</string>
    <string name="section_user">User</string>
    <string name="title_change_username">Change username</string>
    <string name="summary_change_username">This is the name displayed in the Forum</string>
    <string name="title_dialog_change_username">Your username</string>
    <string name="on_changed_username">Your username is:  </string>
    <string name="on_no_change_username">Enter new username</string>
    <string name="on_invalid_username">Invalid username, pick something else</string>
    <string name="title_remove_user_locations">Remove reported locations</string>
    <string name="summary_remove_user_locations">Removes all your reported locations from the database</string>
    <string name="title_remove_user_posts">Remove posts</string>
    <string name="summary_remove_user_posts">Removes all your written posts in the Forum</string>
    <string name="title_remove_user">Delete user</string>
    <string name="summary_remove_user">Deletes your account and all your data</string>
    <string name="alert_title_locations">Delete user locations</string>
    <string name="alert_message_locations">Are you sure you want to delete all your reported locations?</string>
    <string name="alert_toast_locations">Location data deleted</string>
    <string name="alert_title_posts">Delete user posts</string>
    <string name="alert_message_posts">Are you sure you want to delete all your written posts?</string>
    <string name="alert_toast_posts">Posts deleted</string>
    <string name="alert_title_user">Delete user</string>
    <string name="alert_message_user">Are you sure you want to delete your entire user account?</string>
    <string name="section_help">Help</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="summary_send_feedback">Report technical issues or suggest new features</string>
    <string name="fragment_statistics"><u>Statistics</u></string>
    <string name="checkbox_explanation">Choose the symptoms you want to see above by checking/unchecking the checkboxes:</string>
    <string name="number_of_reported_cases"><u>Number of reported cases</u></string>
    <string name="total_symptoms">Total symptoms</string>
    <string name="per_day_symptoms">Symptoms per day</string>
    <string name="age_years">Age (years)</string>
    <string name="number_of_female_users">Female</string>
    <string name="number_of_male_users">Male</string>
    <string name="number_of_other_users">Other</string>
    <string name="age_0_18">0-18</string>
    <string name="age_19_40">19-40</string>
    <string name="age_41_64">41-64</string>
    <string name="age_over_65">65+</string>
    <string name="fragment_heatmap">Heatmap</string>
    <string name="btn_zoom_in_on_your_location">Zoom in on your location</string>
    <string name="no_reports">No reports</string>
    <string name="fragment_report_symptoms">Report symptoms</string>
    <string name="report_symptoms_information">Please grade your symptoms
        \n Number of red circles:\n 0 = No symptoms                               1 = Mild symptoms \n 2 = Moderate symptoms                     3 = Severe symptoms"</string>
    <string name="symptom_fever">Fever</string>
    <string name="symptom_cough">Cough</string>
    <string name="symptom_breathing">Difficulty-/nBreathing</string>
    <string name="symptom_sore_throat">Sore Throat</string>
    <string name="symptom_nasal_congestion">Nasal -/nCongestion</string>
    <string name="symptom_runny_nose">Runny Nose</string>
    <string name="symptom_tiredness">Tiredness</string>
    <string name="symptom_headache">Headache</string>
    <string name="symptom_diarrhea">Diarrhea</string>
    <string name="symptom_sick">All sick</string>
    <string name="dialog_fever" translatable="false">Feber defineras som en högre kroppstemperatur än normalt. Några av av de vanligare symtomen är känslor av utmattning och det är vanligt att känna sig kallare</string>
    <string name="dialog_cough" translatable="false">The typical cough for the Corona virus often involves a dry, prolonged cough</string>
    <string name="dialog_nasal_congestion" translatable="false">Nasal congestion means that the mucous membranes have swollen and common symptoms are that you have a harder time breathing through your nose.</string>
    <string name="dialog_runny_nose" translatable="false">Having a runny nose involves an infection that affects the upper respiratory tract, in other words the mucous membranes of the nose, throat and sinuses</string>
    <string name="dialog_headache" translatable="false">Headache may appear as a sharper or a more throbbing pain. It can located to a specific region or radiate all across your head</string>
    <string name="dialog_diarrhea" translatable="false">Means loose and watering stools and probably you need to visit the toilet several times in a short time. Common symptoms are tremors and a bloated feeling</string>
    <string name="btn_clear">Clear</string>
    <string name="next_info">If you have completed reporting your symptoms, please press <b>NEXT STEP</b> to continue to Report Location.</string>
    <string name="btn_next_page_rl">Next step</string>
    <string name="fragment_report_location">Report location</string>
    <string name="info_title_report_location">Report location info title</string>
    <string name="info_message_report_location">Please submit one or more of your previously visited locations the past two weeks by using the earth icon.
        Please use the calendar icon to select dates at the location.
    </string>
    <string name="btn_update_locations">Upload locations</string>
    <string name="btn_previous_page_rs">Back to Report Symptoms</string>
    <string name="btn_add_location">Add\nlocation</string>
    <string name="btn_commit_location">Set Location</string>
    <string name="no_locations_to_add">No locations to add</string>
    <string name="fail_add_user_locations">Failed to add user locations, please try again later</string>
    <string name="success_add_user_locations">Successfully added user locations</string>
    <string name="no_location_added">Fill in Location above before adding another one</string>
    <string name="max_number_of_locations_reached">Maximum number of locations added</string>
    <string name="already_empty_location">Fill in empty location above before adding another one</string>
    <string name="hint_location1">Location 1</string>
    <string name="hint_location2">Location 2</string>
    <string name="hint_location3">Location 3</string>
    <string name="hint_location4">Location 4</string>
    <string name="hint_location5">Location 5</string>
    <string name="hint_location6">Location 6</string>
    <string name="hint_location7">Location 7</string>
    <string name="hint_location8">Location 8</string>
    <string name="hint_location9">Location 9</string>
    <string name="hint_location10">Location 10</string>
    <string name="hint_location11">Location 11</string>
    <string name="hint_location12">Location 12</string>
    <string name="fragment_forum">Forum</string>
    <string name="info_title_forum">Forum info title</string>
    <string name="info_message_forum">Forum info message</string>
    <string name="btn_most_liked">Most liked</string>
    <string name="btn_recommended">Rec</string>
    <string name="btn_all">All</string>
    <string name="post_hint_title">Title</string>
    <string name="post_hint_message">Message</string>
    <string name="post_hint_username">Username</string>
    <string name="btn_post">Post</string>
    <string name="fail_to_get_post">Failed to get post</string>
    <string name="fail_to_add_post">Failed to add post</string>
    <string name="fail_to_add_like">Failed to add like</string>
    <string name="success_to_get_most_liked_post">Got most liked post</string>
    <string name="help">Help and tasks </string>
    <string name="recommendation">Recommendations and warnings </string>
</resources>