<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/page_name_reset_password"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailToConfirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="128dp"

        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_outline"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword" />

    <EditText
        android:id="@+id/verificationCodeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_confirmation_code"
        android:inputType="numberSigned"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btnVerifyEmailAndSendCode"
        app:layout_constraintStart_toStartOf="@+id/btnVerifyEmailAndSendCode"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyEmailAndSendCode" />

    <Button
        android:id="@+id/btnVerifyEmailAndSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_send_code"
        app:layout_constraintEnd_toEndOf="@+id/emailToConfirm"
        app:layout_constraintStart_toStartOf="@+id/emailToConfirm"
        app:layout_constraintTop_toBottomOf="@+id/emailToConfirm" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/verificationCodeCheck"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodeCheck" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_change_password"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>