<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".StartPageFragment">

    <TextView
        android:id="@+id/textViewStartPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/page_name_start_page"
        android:textAllCaps="true"
        android:textColor="@color/colorTextTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartToRs"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@drawable/sickicon"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_report_symptom"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartPage" />

    <Button
        android:id="@+id/btnStartToHeatmap"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@drawable/earthicon"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_heatmap"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnStartToRs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnStartToRs" />

    <Button
        android:id="@+id/btnStartToStatistics"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@drawable/graphicon"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_statistics"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnStartToRs"
        app:layout_constraintTop_toBottomOf="@+id/btnStartToRs" />

    <Button
        android:id="@+id/btnStartToForum"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_selector"
        android:drawableTop="@drawable/chaticon"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_forum"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnStartToHeatmap"
        app:layout_constraintTop_toBottomOf="@+id/btnStartToHeatmap" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_selector"
        android:text="@string/log_out"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/colorBackground"
        android:src="@drawable/settings_icon_32x32"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStartPage"
        app:layout_constraintStart_toEndOf="@+id/textViewStartPage"
        app:layout_constraintTop_toTopOf="@+id/textViewStartPage" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="171dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartToStatistics"
        app:layout_constraintVertical_bias="0.741"
        app:srcCompat="@drawable/logo_transparent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStartPage"
        app:layout_constraintEnd_toStartOf="@+id/textViewStartPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewStartPage"
        app:srcCompat="@drawable/logo__icon_transparent" />


</androidx.constraintlayout.widget.ConstraintLayout>